# django-safemigrate

./: .gitignore  HISTORY.rst  README.rst  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
src/django_safemigrate/: apps.py  models.py
src/django_safemigrate/management/commands/: safemakemigrations.py  safemigrate.py
tests/: safemigrate_test.py
