[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-safemigrate"
version = "4.3"
description = "Safely run migrations before deployment"
authors = [{ name = "Ryan Hiebert", email = "ryan@aspiredu.com" }]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["django>=4.2"]

[project.scripts]
safemigrate-check = "django_safemigrate.check:main"

[project.optional-dependencies]
pg = ["psycopg[binary]>=3.0"]
pg2 = ["psycopg2-binary"]
mysql = ["mysqlclient"]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.coverage.run]
branch = true
parallel = true
source = ["django_safemigrate"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
