[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-safemigrate"
version = "5.2"
description = "Safely run migrations before deployment"
authors = [{ name = "Ryan Hiebert", email = "ryan@ryanhiebert.com" }]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["django>=4.2"]

[project.scripts]
safemigrate-check = "django_safemigrate.check:main"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-mock",
  "dj-database-url",
  "coverage[toml]",
]

[tool.isort]
combine_as_imports = true
profile = "black"

[tool.coverage.run]
branch = true
source = ["django_safemigrate"]

[tool.coverage.paths]
source = [
  "src/django_safemigrate",
  ".tox/*/lib/python*/site-packages/django_safemigrate",
]

[tool.coverage.report]
show_missing = true
